--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,67 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
+}
+
+ul {
+  padding-left: 0;
+  text-align: left;
+}
+
+li {
+  list-style-type: none;
+  display: block;
+  width: 100px;
+  padding: 8px 16px;
+  color:  black;
+  background-color: white;
+  cursor: pointer;
+  border: 1px solid black;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1070px;
+  padding: 20px;
+  min-width: 1070px;
+}
+
+.header {
+  font-size: 50px;
+  font-weight: 300;
+  margin: 10px 0;
+  text-align: left;
+}
+
+.subheader {
+  font-size: 30px;
+  font-weight: 300;
+}
+
+.icon-btn {
+  background: none;
+  border: none;
+}
+
+.nav {
+  overflow: hidden;
+  display: block;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.App {
+  text-align: left;
+}
+
+.App-header {
+  background-color: #222;
+  height: 12em;
+  padding: 20px;
+  color: white;
+}
+
+.App-intro {
+  font-size: large;
 }
