--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,6 +26,13 @@ li.post {
   margin-bottom: 1em;
 }
 
+li.comment {
+  width: 90%;
+  border: .125em groove gray;
+  margin-bottom: 1em;
+  margin-left: 1em;
+}
+
 .header.category {
   text-align: left;
   margin: 1em .5em .4em;
