--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -51,6 +51,35 @@ li.comment {
   display: block;
 }
 
+.addPostForm {
+  padding: 8px 0;
+  margin: 0 auto;
+}
+
+.addPostForm input {
+  display: block;
+  padding: 5px 10px;
+  margin-bottom: 10px;
+  font-size: inherit;
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  width: 60%;
+}
+
+
+.addPostForm textarea {
+  display: block;
+  padding: 5px 10px;
+  margin-top: 2em;
+  margin-bottom: 1em;
+  width:80%;
+  height:10em;
+  font-size: inherit;
+  background: transparent;
+  border: 1px solid #ccc;
+}
+
 .active {
   color: orange;
 }
