feat: Apply styling to post form header

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -98,6 +98,10 @@ li.comment {
   background-color: #999;
 }
 
+.postFormHeader {
+  text-transform: uppercase;
+}
+
 .active {
   color: orange;
 }
