--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -144,10 +144,16 @@ li.comment {
   font-size: 1em;
 }
 
+.postHeader {
+  font-size: 2;
+  font-weight: 300;
+  margin: 0em 0 0 0em;
+}
+
 .postSubheader {
   font-size: .8em;
   font-weight: 300;
-  margin: -1em 0 0 4em;
+  margin: .5em 0 0 4em;
 }
 
 .postBody {
