--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -49,8 +49,19 @@ li.comment {
 
 .nav.link {
   text-decoration: none;
-  padding: 8px 16px;
+  padding: .5em 1em;
   display: block;
+}
+
+.vote {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1em;
+}
+
+.vote span {
+  margin: 0 .5em;
 }
 
 .nav.link.edit {
@@ -84,7 +95,6 @@ li.comment {
   border-bottom: 1px solid #ccc;
   width: 60%;
 }
-
 
 .addPostForm textarea {
   display: block;
