feat: Apply absolute position for CommentForm and accommodate with relative positioning of the CommentList in a PostDetailView via passing the specific position style prop from Post -> CommentList components

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -165,8 +165,6 @@ select.sort {
   color: orange;
 }
 
-.column {
-}
 
 .column.menu {
   width: 10em;
@@ -178,9 +176,15 @@ select.sort {
   margin-top: 1em;
 }
 
+.column.content.commentform {
+  top: 21em; 
+  position: absolute;
+}
+
 .comments {
   margin-top: 2em;
   width: 100%;
+  position: relative;
 }
 
 .comment.content {
