--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,10 +36,6 @@ li.comment {
   margin-left: 1em;
 }
 
-.header.category {
-  text-align: left;
-  margin: 1em .5em .4em;
-}
 
 .vote {
   display: flex;
@@ -131,7 +127,6 @@ select.sort {
   margin-left: 1em;
 }
 
-
 .postFormHeader {
   text-transform: uppercase;
 }
@@ -156,6 +151,12 @@ select.sort {
   font-size: 2;
   font-weight: 300;
   margin: 0;
+}
+
+.title-header {
+  text-align: left;
+  margin: 1em .5em .4em;
+  width: fit-content;
 }
 
 /* Container Organization */ 
@@ -219,7 +220,6 @@ select.sort {
   flex-direction: row;
   justify-content: space-between;
 }
-
 
 /* Container Styling */ 
 
