--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,77 +36,6 @@ li.comment {
   margin-left: 1em;
 }
 
-.vote {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 1em;
-}
-
-.vote span {
-  width: 3em;
-  text-align: center;
-  line-height: 1.25;
-  margin: .25em .5em;
-  overflow: hidden;
-  overflow-wrap: break-word;
-}
-
-select.sort {
-  margin-left: 1em;
-  border: none;
-  background-color: #B9B9B9;
-  width: 10em;
-  height: 2em;
-  font-size: 1em;
-}
-
-
-.form-style {
-  padding: 8px 0;
-  margin: 0 auto;
-}
-
-.form-style input {
-  display: block;
-  padding: 5px 10px;
-  margin-bottom: 10px;
-  font-size: inherit;
-  background: transparent;
-  border: none;
-  border-bottom: 1px solid #ccc;
-  width: 60%;
-}
-
-.form-style textarea {
-  display: block;
-  padding: 5px 10px;
-  margin-top: 2em;
-  margin-bottom: 1em;
-  width:80%;
-  height:10em;
-  font-size: inherit;
-  background: transparent;
-  border: 1px solid #ccc;
-}
-
-.form-style button {
-  margin: 1em;
-  margin-right: 20%;
-  background: #ccc;
-  padding: 10px;
-  text-transform: uppercase;
-  float: right;
-  font-size: inherit;
-  border: none;
-  cursor: pointer;
-}
-
-.form-style button:hover {
-  background-color: #999;
-}
-
-
 /* Text Styling */ 
 
 .subtitle-style {
@@ -140,6 +69,13 @@ select.sort {
 }
 
 /* Container Organization */ 
+
+.vote {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1em;
+}
 
 .sort-header {
   margin: 0 0 .5em;
@@ -214,7 +150,7 @@ select.sort {
 }
 
 .main-body {
-  padding-left: 1em;
+  padding-left: 2em;
   width: 40em; 
   margin-top: 1em;
 }
@@ -227,7 +163,7 @@ select.sort {
 }
 
 .post {
-  margin: 1em 1em 1em 0;
+  margin: 1em 1em 1em 1em;
   font-size: 1em;
   border: solid black .125em;
 }
@@ -244,3 +180,64 @@ select.sort {
   margin: .5em .75em .75em 0;
 }
 
+.form-style {
+  padding: 8px 0;
+  margin: 0 auto;
+}
+
+.form-style input {
+  display: block;
+  padding: 5px 10px;
+  margin-bottom: 10px;
+  font-size: inherit;
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  width: 60%;
+}
+
+.form-style textarea {
+  display: block;
+  padding: 5px 10px;
+  margin-top: 2em;
+  margin-bottom: 1em;
+  width:80%;
+  height:8em;
+  font-size: inherit;
+  background: transparent;
+  border: 1px solid #ccc;
+}
+
+.form-style button {
+  margin: 1em;
+  margin-right: 20%;
+  background: #ccc;
+  padding: 10px;
+  text-transform: uppercase;
+  float: right;
+  font-size: inherit;
+  border: none;
+  cursor: pointer;
+}
+
+.form-style button:hover {
+  background-color: #999;
+}
+
+.ui-vote-score {
+  width: 3em;
+  text-align: center;
+  line-height: 1.25;
+  margin: .25em .5em;
+  overflow: hidden;
+  overflow-wrap: break-word;
+}
+
+select.sort {
+  margin-left: 1em;
+  border: none;
+  background-color: #B9B9B9;
+  width: 10em;
+  height: 2em;
+  font-size: 1em;
+}
