style: Establish button consistency with respect to NavLink 'buttons'

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -75,6 +75,8 @@ li.comment {
   justify-content: space-between;
   align-items: center;
   padding: 0 1em;
+  margin-top: .75em;
+  margin-bottom: .75em;
 }
 
 .sort-header {
@@ -98,6 +100,7 @@ li.comment {
   display: block;
   justify-content: space-between;
   align-items: center;
+  color: black;
 }
 
 .container-comments {
@@ -141,6 +144,10 @@ li.comment {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+#editdeleteblock {
+  justify-content: flex-end;
 }
 
 /* Container Styling */ 
@@ -211,12 +218,13 @@ li.comment {
 .form-style button {
   margin: 1em;
   margin-right: 20%;
-  background: #ccc;
-  padding: 10px;
-  text-transform: uppercase;
+}
+
+button {
+  padding: .5em;
   float: right;
   font-size: inherit;
-  border: none;
+  border: 2px solid black;
   cursor: pointer;
 }
 
